--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
   <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
-  <title>Grunt & fabs: Moderner Build und Workflow für moderne Web-Anwendungen</title>
+  <title>Build-System und Development-Workflow für moderne Web-Anwendungen</title>
 
   <% styles.forEach( function ( file ) { %>
   <link rel="stylesheet" type="text/css" href="<%= file %>"/>
